Add source chapter 44

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -333,6 +333,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">44</p>
+<p class="itemText">How it is not a seemly thing to Revile the King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now it is not a seemly thing to revile the king, for he is the anointed of God. It is neither seemly nor good. If he doeth that which is good he will not suffer loss in three kingdoms: FIRST, God shall overthrow for him his enemy, and he shall not be seized by the hand of his enemy. SECONDLY, God shall make him reign with Him and with His righteousness, and shall make him to sit on His right hand. THIRDLY, God shall make him to reign upon earth wi...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">45</p>
