add source chapter 45

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -338,6 +338,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">45</p>
+<p class="itemText">How those who were sent away wept and made a plan</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the children of the nobles of Israel, who were commanded to depart with the son of the king, took counsel together, saying, “What shall we do? For we have left our country and our birth-place, and our kinsfolk and the people of our city. Now, come ye, let us establish a covenant between us only, whereof our kinsfolk shall know nothing, that we will love each other in that country: none shall hasten or tarry here, and we will neither fear nor...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">46</p>
