Add source chapter 46

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -343,6 +343,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">46</p>
+<p class="itemText">How they made a Plan concerning Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And while Azâryâs was asleep at night the Angel of the Lord appeared unto him, and said unto him, “Take to thee four goats, each a yearling—now they shall be for your sins, thyself, and ’Êlmeyâs, and ’Abîs, and Mâkrî—and four pure sheep, yearlings also, and an ox whereon no yoke hath ever been laid. And thou shalt offer up the ox as a sacrifice on the east side of her (i.e. Zion), and the sheep and the goats to the right and left thereof, and at the west of ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">47</p>
