--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -348,6 +348,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">47</p>
+<p class="itemText">Concerning the Offering of Azâryâs (Azariah) and the King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Yôâs (Benaiah), the son of Yôdâhê, went and told King Solomon, and the King rejoiced over it and commanded them to make ready the altar of offering so that his son might sacrifice. And he brought and gave unto him that which he had vowed to God, one hundred bulls, one hundred oxen, ten thousand sheep, ten thousand goats, and ten of every kind of animal that may be eaten, and ten of every kind of clean bird, so that he might offer lib...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">48</p>
