--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -353,6 +353,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">48</p>
+<p class="itemText">How They Carried away Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And behold, the Angel of the Lord appeared again to Azâryâs and he stood up above him like a pillar of fire, and he filled the house with his light. And he raised up Azâryâs and said unto him, “Stand up, be strong, and rouse up thy brother Êlmĕyâs, and ’Abĕsâ, and Mâkarî, and take the pieces of wood and I will open for thee the doors of the sanctuary. And take thou the Tabernacle of the Law of God, and thou shalt carry it without trouble and discomfort. And I, inasmuc...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">49</p>
