--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -358,6 +358,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">49</p>
+<p class="itemText">How his Father blessed his Son</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And then the King of Ethiopia rose up to depart to his country, and he came to his father that he might pray on his behalf, and he said unto him, “Bless me, father”; and he made obeisance unto him. And the King raised him up, and blessed him, and embraced his head, and said, “Blessed be the Lord my God Who blessed my father David, and Who blessed our father Abraham. May He be with thee always, and bless thy seed even as He blessed Jacob, and made his seed to be as...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">50</p>
