--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -363,6 +363,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">50</p>
+<p class="itemText">How they bade farewell to his Father and how the City mourned</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And they bade [the king] farewell and departed. And first of all they set Zion by night upon a wagon together with a mass of worthless stuff, and dirty clothes, and stores of every sort and kind. And [when] all the wagons were loaded, and the masters of the caravan rose up, and the horn was blown, and the city became excited, and the youths shouted loudly, awesomeness crowned it and grace surrounded it (i.e. Zion). And the old men wa...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">51</p>
