--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -368,7 +368,7 @@
 </li>
 <li>
 <p class="topLevelItemTitle">51</p>
-<p class="itemText">How he said unto Zadok the Priest, “Go and Bring the Covering (or, Clothing) which is upon it (i.e. Zion)”</span></p></p>
+<p class="itemText">How he said unto Zadok the Priest, “Go and bring the Covering (or, Clothing) which is upon it (i.e. Zion)”</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">And he said unto Zadok the priest, “Go, bring that covering which is upon Zion, and take thee this covering which is better than that, and lay it over the two [cherubs] which are below it.” (Now this covering was made of threads of the finest gold wirework twisted together and hammered out into a pattern, and they were not woven like the threads of purple.) “And the five mice which were giv...</p>
 </li>
 <li>
