--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -373,6 +373,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">52</p>
+<p class="itemText">How Zadok the Priest departed</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Zadok the priest went and gave David the covering of Zion, and he delivered unto him all the commands which Solomon had spoken. And David, the son of Solomon, rejoiced because of this, and he marvelled and held himself to be blessed exceedingly, and said, when the covering of the Tabernacle of the Law of God was committed to his charge, “This shall be to me my Lady.” And Azâryâs answered and said before his father, “Thou rejoicest over the covering, but how ver...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">53</p>
