--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -378,6 +378,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">53</p>
+<p class="itemText">How the Wagon was given to Ethiopia</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And they halted by Gâzâ, the city of the mother of the king, which Solomon the king had given to the Queen of Ethiopia when she came to him. And from there they came in one day to the border of Gĕbĕs (Egypt), the name of which is “Mesrîn.” And when the sons of the warriors of Israel saw that they had come in one day a distance of thirteen days’ march, and that they were not tired, or hungry, or thirsty, neither man nor beast, and that they all [felt] that the...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">54</p>
