--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -383,6 +383,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">54</p>
+<p class="itemText">How David [the King of Ethiopia] Prophesied and Saluted Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And King [David] came and stood up before Zion, and he saluted it, and made obeisance thereto, and said, “O Lord God of Israel, to Thee be praise, because Thou doest Thy Will and not the will of men. Thou makest the wise man to forget his wisdom, and Thou destroyest the counsel of the counsellor, and Thou raisest the poor man from the depth, and Thou settest the sole of his foot upon a strong rock. For a full cup of glory is in Thy ha...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">55</p>
