--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -388,6 +388,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">55</p>
+<p class="itemText">How the people of Ethiopia rejoiced</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And [the people of Ethiopia] took flutes, and blew horns, and [beat] drums, and [played on] pipes, and the Brook of Egypt was moved and astonished at the noise of their songs and their rejoicings; and with them were mingled outcries and shouts of gladness. And their idols, which they had made with their hands and which were in the forms of men, and dogs, and cats, fell down, and the high towers (pylons or obelisks?), and also the figures of birds, [made] of g...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">56</p>
