--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -393,6 +393,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">56</p>
+<p class="itemText">Of the Return of Zadok the Priest, and the Giving of the Gift</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And when Zadok the priest returned to Solomon the King he found him sorrowful. And the King answered and said unto Zadok the priest, “When the Queen came there appeared to me by night this vision: It seemed as if I were standing in the chamber of Jerusalem, and the sun came down from heaven into the land of Judah, and lighted it up with great splendour. And having tarried a time it went down and lighted up the country of Ethiopia, an...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">57</p>
