--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -398,6 +398,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">57</p>
+<p class="itemText">Concerning the Fall of Zadok the Priest</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And when Zadok saw this he fell forward on his face flat upon the ground, and his spirit was poured out over him, for he was terrified; and he became like a dead man. And when he tarried in coming out Solomon sent to him Îyôas (Benaiah), the son of Yôdâhê, and he found Zadok like one dead. And he lifted up the head of Zadok, and felt his heart and his nose to find out whether there was any sign of breath being in him; and he fanned him, and lifted him up,...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">58</p>
