--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -403,6 +403,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">58</p>
+<p class="itemText">How Solomon rose up to slay them</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus spake King Solomon. And the King rose up in wrath and set out to pursue [the men of Ethiopia]. And when the King, and his nobles, and his mighty men of war rose up (i.e. had set out), the elders of Israel, and the widows, and the virgins gathered together in the house of God, and they wept for Zion, for the Tabernacle of the Law of God had been taken away from them. Now after Zadok had remained [senseless] for a season, his heart returned to him. And then t...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">59</p>
