--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -408,6 +408,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">59</p>
+<p class="itemText">How the King questioned an Egyptian, the Servant of Pharaoh</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon left that place, and he met a noble of the nobles of Egypt, whom King Pharaoh had sent unto him with a gift; and there was an abundance of treasures with him, and he came and made obeisance to the King. And Solomon the King made haste to question him, even before he had presented his gift and embassy, and said unto him, “Hast thou seen men of Ethiopia fleeing by this road?” And the ambassador of Pharaoh answered and said un...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">60</p>
