--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -413,6 +413,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">60</p>
+<p class="itemText">How Solomon lamented for Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon entered into his tent, and wept bitterly, and said, “O God, willest Thou to take away the Tabernacle of Thy Covenant from us in my days ? If only Thou hadst taken away my life before this which Thou hast taken away in my days! For Thou canst not make Thy word to be a lie, and Thou canst not break Thy Covenant which Thou didst make with our fathers, with Noah Thy servant who kept righteousness, and with Abraham who did not transgress Thy commandment, and...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">61</p>
