--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -418,6 +418,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">61</p>
+<p class="itemText">How Solomon returned to Jerusalem</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And then Solomon came back to the city of Jerusalem, and he wept there with the elders of Jerusalem a great weeping in the house of God. And after this the King and Zadok the priest embraced each other, and they wept bitterly in the habitation of Zion, and they remained silent for a long time. And the elders rose up and spake unto the King, saying, “Be not thou sorrowful concerning this thing, O our Lord, for we know, from first to last, that without the Will o...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">62</p>
