--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -423,6 +423,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">62</p>
+<p class="itemText">Concerning the answer which Solomon made to them</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon the King answered and said unto them, “Hearken ye unto me and to what I shall say unto you. Supposing He had taken me away whilst I was carrying Zion—what is impossible to God? And supposing He had taken you away whilst ye were carrying her—what is impossible to God? And supposing He were to make them to inherit our city, and destroy us—what is impossible to God? For everything is His, and none can gainsay His Will, and there is none ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">63</p>
