--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -428,6 +428,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">63</p>
+<p class="itemText">How the Nobles of Israel agreed [with the King]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And then the elders of Israel made answer and said unto him, “May thy good pleasure be done, and the good pleasure of the Lord God! As for us, none of us will transgress thy word, and we will not inform any other people that Zion hath been taken away from us.” And they established this covenant in the House of God—the elders of Israel with their King Solomon unto this day. And Solomon lived [thus] for eleven years after the taking away of Zion fro...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">64</p>
