--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -433,6 +433,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">64</p>
+<p class="itemText">How the Daughter of Pharaoh seduced Solomon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And then the daughter of Pharaoh appeared before Solomon, and said unto him, “It is good to worship the gods like my father and all the kings of Egypt who were before my father.” And Solomon answered and said unto her, “They call gods the things which have been made by the hands of the worker in metal, and the carpenter, and the potter, and the painter, and the hewer in stone, and the sculptor; these are not gods, but the work of the hand of man, in g...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">65</p>
