--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -438,6 +438,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">65</p>
+<p class="itemText">Concerning the Sin of Solomon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now Solomon sinned an exceedingly great sin through the worship of idols, and from being a wise man he became a fool, and his sin is written down in the Book of the Prophets. And the Archbishops who were there answered and said, “Hath God had mercy on Solomon for this error which is written down [as] his sin?” Yea, God hath had mercy upon him, and his name is numbered with [the names of] Abraham, Isaac, and Jacob, and David his father in the Book of Life in heaven....</p>
 </li>
 <li>
 <p class="topLevelItemTitle">66</p>
