--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -443,6 +443,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">66</p>
+<p class="itemText">Concerning the Prophecy of Christ</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now, according to the interpretation of prophecy, the name Solomon signifieth in the secret speech “Christ.” And as Solomon built the house of God, so Christ raised up His Body and made it into the Church. And when He said unto the Jews, “Throw down this house, and in three days I will build it up [again],” He spake to them of the house of His Body. And as Solomon multiplied wives from alien peoples because of their beauty and winsomeness, and desires [arose] i...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">67</p>
