--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -448,6 +448,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">67</p>
+<p class="itemText">Concerning the Lamentation of Solomon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And now I will tell you how he died. His days were sixty [years], when a sickness attacked him. And his days were not as the days of David his father, but they were twenty [years] shorter than his, because he was under the sway of women and worshipped idols. And the angel of death came and smote him [in] the foot, and he wept and said, “O Lord God of Israel, I am conquered by the terrestrial law, for there is no one free from blemish before Thee, O Lord, an...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">68</p>
