--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -453,6 +453,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">68</p>
+<p class="itemText">Concerning Mary, our Lady of Salvation</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“And again, there shall be unto thee a sign that the Saviour shall come from thy seed, and that He shall deliver thee with thy fathers and thy seed after thee by His coming. Your salvation was created in the belly of Adam in the form of a Pearl before Eve. And when He created Eve out of the rib He brought her to Adam, and said unto them, ‘Multiply you from the belly of Adam.’ The Pearl did not go out into Cain or Abel, but into the third that went forth fr...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">69</p>
