--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -458,6 +458,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">69</p>
+<p class="itemText">Concerning the Question of Solomon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon turned and looked at the Angel and stretched out both his hands, and said, “My lord, is the coming of the Saviour of which thou speakest near or far off?” And the Angel answered and said unto him, “He will come three and thirty generations from thy kin and from thy seed and will deliver you. But Israel will hate their Saviour, and will be envious of Him because He will work signs and miracles before them. And they will crucify Him, and will kill Hi...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">70</p>
