--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -463,6 +463,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">70</p>
+<p class="itemText">How Rehoboam reigned</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Then Zadok the priest took Rehoboam and made him king, and he anointed him and performed for him whatsoever the Law demanded. And Rehoboam laid a tablet of wood upon the Tabernacle, and he found it with the name of his father Solomon [written upon] it, and then they set him upon the king’s mule, and said unto him, “All hail! Long live the royal father!” and the city resounded with cries, and the trumpet was blown. And before Rehoboam could return to his father Solomon died....</p>
 </li>
 <li>
 <p class="topLevelItemTitle">71</p>
