--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -468,6 +468,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">71</p>
+<p class="itemText">Concerning Mary, the Daughter of David</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And from this it is evident that Mary was the daughter of David, and that Joseph was the son of David. Therefore was Mary betrothed to Joseph her kinsman, as it is said in the Gospel, “O Joseph, son of David, fear thou not to take to wife Mary thy betrothed, for that which is to be born of her is of the Holy Spirit, the Word of God.” And there was born of her God, the Word, Light of Light, God of God, Son of the Father, Who came and delivered His creation;...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">72</p>
