add source colophon

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -473,6 +473,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">72</p>
+<p class="itemText">Concerning the King of Rômê (Constantinople)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And we will begin to tell you what we have heard, and what we have found written, and what we have seen concerning the King of Rômê. The kingdom of Rômê was the portion and dominion of Japhet, the son of Noah. And sitting down they made twelve great cities, and Darius built the greatest cities of their kingdoms: ’Anṭôkyâ (Antioch), Dîresyâ (Tyre?), and Bârtonyâ (Parthia?), and Râmyâ (Roma?), and those who reigned dwelt there; and King Constantine bui...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">73</p>
@@ -608,6 +610,11 @@
 </li>
 <li>
 <p class="topLevelItemTitle">117</p>
+</li>
+<li>
+<p class="topLevelItemTitle">Colophon</p>
+<p class="itemText">Colophon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">In the Arabic text it is said: “We have turned [this book] into Arabic from a Coptic manuscript [belonging to] the throne of Mark the Evangelist, the teacher, the Father of us all. We have translated it in the four hundred and ninth year of mercy in the country of Ethiopia, in the days of Gabra Masḳal the king, who is called Lâlîbalâ, in the days of Abbâ George, the good bishop. And God neglected to have it translated and interpreted into the speech of Abyssinia. And when I had pondere...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Appendices</p>
