--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -607,6 +607,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">116</p>
+<p class="itemText">Concerning the Chariot of Ethiopia</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Archbishops answered and said unto Gregory, the Worker of Wonders, “Behold now, thou hast told us concerning the vanquisher of the enemy of Rômê, and now [tell us] of the chariot of Ethiopia and whether it shall remain henceforward, to the Coming of Christ, as thou hast told us concerning Zion, and concerning the faith of the people of Ethiopia, and likewise if their chariot shall remain.” And Gregory said unto them, “It shall assuredly not disappear. ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">117</p>
