--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -612,6 +612,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">117</p>
+<p class="itemText">117. CONCERNING THE KING OF RÔMÊ AND THE KING OF ETHIOPIA</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the King of Rômê, and the King of Ethiopia, and the Archbishop of Alexandria—now the men of Rômê were orthodox—were informed that they were to destroy them. And they were to rise up to fight, to make war upon the enemies of God, the Jews, and to destroy them, the King of Rômê ’Ênyâ, and the King of Ethiopia Pinḥas (Phinehas); and they were to lay waste their lands, and to build churches there, and they were to cut to pieces Jews at t...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Colophon</p>
