--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -604,6 +604,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">115</p>
+<p class="itemText">Concerning the Judgement of Israel</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And He shall answer and say unto them, “Why did ye deny Me, and entreat Me evilly and crucify Me, [seeing that] I did all this for you, and that by My coming down [from heaven] I delivered you from Satan and from the slavery of Satan, and that I came for your sakes? Look ye and see how ye pierced Me with nails and thrust the spear through Me.” And the Twelve Apostles shall be raised up, and they shall pass judgement upon them, and shall say unto them, “We woul...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">116</p>
@@ -612,8 +614,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">117</p>
-<p class="itemText">117. CONCERNING THE KING OF RÔMÊ AND THE KING OF ETHIOPIA</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And the King of Rômê, and the King of Ethiopia, and the Archbishop of Alexandria—now the men of Rômê were orthodox—were informed that they were to destroy them. And they were to rise up to fight, to make war upon the enemies of God, the Jews, and to destroy them, the King of Rômê ’Ênyâ, and the King of Ethiopia Pinḥas (Phinehas); and they were to lay waste their lands, and to build churches there, and they were to cut to pieces Jews at t...</p>
+<p class="itemText">Concerning the King of Rômê and the King of Ethiopia</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the King of Rômê, and the King of Ethiopia, and the Archbishop of Alexandria—now the men of Rômê were orthodox—were informed that they were to destroy them. And they were to rise up to fight, to make war upon the enemies of God, the Jews, and to destroy them, the King of Rômê ’Ênyâ, and the King of Ethiopia Pinḥas (Phinehas); and they were to lay waste their lands, and to build churches there, and they were to cut to pieces Jews at the en...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Colophon</p>
