--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -598,9 +598,13 @@
 </li>
 <li>
 <p class="topLevelItemTitle">113</p>
+<p class="itemText">Asd<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1 Psalm lxviii, 31.</p>
 </li>
 <li>
 <p class="topLevelItemTitle">114</p>
+<p class="itemText">Concerning the return of Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Tabernacle of the Law of God, the Holy Zion, shall remain here until that day when our Lord shall dwell on Mount Zion; and Zion shall come and shall appear unto all prepared, with three seals—even as Moses gave her—as it saith in the Old Law and in the New, “At the testimony of two or three [witnesses] everything shall stand.” And then, saith Isaiah the Prophet, “The dead shall be raised up, and those who are in the graves shall live, for the dew which [com...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">115</p>
