--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -595,11 +595,15 @@
 </li>
 <li>
 <p class="topLevelItemTitle">112</p>
+<p class="itemText">How the Prophets foreshadowed Him in their persons</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1 Genesis xlvii, 29. 2 Genesis l, 25.</p>
 </li>
 <li>
 <p class="topLevelItemTitle">113</p>
-<p class="itemText">Asd<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">1 Psalm lxviii, 31.</p>
+<p class="itemText">Concerning the Chariot and the Vanquisher of the Enemy</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Archbishops (or, Patriarchs) answered and said unto Gregory, the Worker of Wonders, “Behold now, we know well, and thou hast made us to understand that the Kings of Ethiopia have become glorious and great through Zion. And the Kings of Rômê also have become great because of the nails [of the Cross] that Helena made into a bridle, which hath become the vanquisher of the enemy for the King of Rômê. And the chariot belongeth to the King...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">114</p>
