--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -596,9 +596,8 @@
 <li>
 <p class="topLevelItemTitle">112</p>
 <p class="itemText">How the Prophets foreshadowed Him in their persons</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">1 Genesis xlvii, 29. 2 Genesis l, 25.</p>
+<p class="itemText"><p class="p1"><span class="s1">Isaac commanded his father, saying, “Bind me”; and he was offered up as a sacrifice, though he did not die, being redeemed by the ram which came down from heaven. And in like manner the Son of God was obedient to His Father even unto death. And He was bound with the love of men, and He was nailed [to the Cross] and was pierced, and the Son of God became our ransom, and His Godhead suffered not.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Jacob his son departed to the land of Lâbâ (L...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">113</p>
