--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -559,9 +559,13 @@
 </li>
 <li>
 <p class="topLevelItemTitle">100</p>
+<p class="itemText">Concerning the Angels who rebelled</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And there were certain angels with whom God was wroth—now He, the Knower of the heart knew them—and they reviled Adam, saying, “Since God hath shown love to him He hath set us to minister unto him, and the beasts and creeping things, and the fish of the sea, and the birds of the air, and all fruits, and the trees of the field, and the heavens and the earth also; and He hath appointed the heavens to give him rain, and the earth to give him fruits. And the sun a...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">101</p>
+<p class="itemText">Concerning Him that existeth in Everything and Everywhere</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And again God said unto Moses: “Make for Me an open space before the courtyard of the Tabernacle; no man who is impure sexually and unclean shall come there, and no one who is not pure. For I am there, and not only there, but in every place like thereunto where My Name is invoked in purity. I was with Daniel in the den [of lions], and I was with Jonah in the belly of the great fish, and I was with Joseph in the pit, and I was with Jeremi...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">102</p>
