--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -556,6 +556,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">99</p>
+<p class="itemText">Concerning the Two Servants</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now [it is said] that a certain king had two slaves: the one was arrogant and strong, and the other was humble and weak. And the arrogant slave overcame the humble one, and smote him and all but slew him, and robbed him, and the king upon his throne saw them. And the king descending seized the arrogant slave, and beat him, and crushed him, and bound him in fetters, and cast him into a place of darkness. And he raised up his humble and weak slave, and embraced him, an...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">100</p>
