--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -589,6 +589,9 @@
 </li>
 <li>
 <p class="topLevelItemTitle">108</p>
+<p class="itemText">Concerning the wickedness of the iniquitous Jews</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Prophets prophesied concerning the wickedness of the Jews. And David said concerning it, “The man of violence hunteth iniquity to destroy himself.” And again he saith, “His sorrow shall return upon his head, and his iniquity upon his forehead” (or, skull).</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Solomon his son prophesied and said, “The foolish man and the man of iniquity travel by paths that are not straight. He winketh with the eye, and tappeth with the foot, and he giv...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">109</p>
