--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -595,6 +595,11 @@
 </li>
 <li>
 <p class="topLevelItemTitle">109</p>
+<p class="itemText">Concerning His Crucifixion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Prophets also prophesied concerning the Crucifixion of Christ.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Moses, the servant of God, prophesied and said, “Ye shall see your salvation crucified upon the wood, and shall not believe.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus David prophesied and said, “Many dogs have seized Me; and they drove nails through My hands and My feet; and they counted all My bones; though they knew Me they despised Me; and they divided My garments among themselves; and they cast lots for My apparel.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">110</p>
