--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -603,6 +603,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">110</p>
+<p class="itemText">Concerning His Resurrection</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the prophet David also prophesied concerning His Resurrection and said, “I will arise, saith the Lord, and I will make salvation and manifest it openly.” And again he saith, “Rise up, O Lord, and judge the earth, for Thou shalt inherit among the nations.” And he also prophesied and said, “Rise up, O Lord, help us, and deliver us for Thy Name’s sake.” And again he said, “Let God arise and let His enemies be scattered, and let His enemies flee from before His face....</p>
 </li>
 <li>
 <p class="topLevelItemTitle">111</p>
