--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -608,6 +608,10 @@
 </li>
 <li>
 <p class="topLevelItemTitle">111</p>
+<p class="itemText">Concerning His Ascension and His Second</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Coming</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus all the Prophets and many of the early Fathers prophesied concerning His Ascension and His Second Coming to judge the living and the dead.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And David said concerning His Resurrection, “He hath gone up into the heights. Thou hast made captive captivity, and hast given grace to the children of men.” And he also said, “Having gone forth, I will come back, and I will return from the abyss of the sea.” And again he said, “Sing ye unto God Who hath...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">112</p>
