--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -586,6 +586,10 @@
 </li>
 <li>
 <p class="topLevelItemTitle">107</p>
+<p class="itemText">Concerning His entrance into Jerusalem in Glory</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Prophets have prophesied concerning His glorious entry into Jerusalem, and Isaiah the Prophet said, “Shine thou, shine thou, Jerusalem, thy light hath come and the glory of God hath risen upon thee.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus the Prophet Zechariah prophesied and said, “Rejoice, rejoice, daughter of Zion, and let Jerusalem shout for joy.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus David prophesied and said, “Out of the mouth of children and babes Thou hast prepared praise because of the enemy, so...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">108</p>
