--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -580,6 +580,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">105</p>
+<p class="itemText">Concerning the belief of Abraham</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And thou dost not understand that they were justified by faith—Abraham, and David and all the Prophets, one after the other, who prophesied concerning the coming of the Son of God. And Abraham said, “Wilt Thou in my days, O Lord, cast Thy word upon the ground?” And God said unto him, “By no means. His time hath not yet come, but I will shew thee a similitude of His coming. Get thee over the Jordan, and dip thyself in the water as thou goest over, and arrive at t...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">106</p>
