--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -577,6 +577,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">104</p>
+<p class="itemText">More concerning the Ark and the Talk of the Wicked</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And as concerning the Ark: God saved Noah in the Ark. And God held converse with Abraham in the wood of Manbar, that is to say the wood that cannot be destroyed; and He saved Isaac by means of the ram which was caught in the thicket; and He made Jacob rich by means of three rods of woods which he laid in running water; and through the top of his staff Jacob was blessed. And He said unto Moses, “Make a tabernacle of wood which cannot be destroye...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">105</p>
@@ -585,6 +587,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">106</p>
+<p class="itemText">A Prophecy concerning the Coming of Christ</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And now hearken how each one of them hath prophesied concerning Him, [for the narrative] is pleasant to hear. Isaiah the Prophet prophesied concerning His coming and said, " A Son is born unto us. A Child is given unto us. Dominion is written upon His shoulder. He is God, strong in rule, King, great Counsellor is His name.” Now the meaning of this is manifest: the Son of God is born, Whose sovereignty was written down before the world was, and He is wi...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">107</p>
