--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -574,6 +574,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">103</p>
+<p class="itemText">Concerning the Horns of the Altar</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now, the Tabernacle symbolizeth the horns of the altar, where the holy priests offer up sacrifice, whereon they place the ṭarapîzâ, (i.e. table), the similitude of the grave wherein He (i.e. Christ) was buried in Golgotha. And what is on the table, that is, the offering, is a symbol of the firstling, that is to say, the Body of Emmanuel, [or] “’Akrâṭôs,” the “pure,” the “unmixed,” which our Saviour took from Mary, of the which He said unto His holy Apostles, “E...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">104</p>
