--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -553,6 +553,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">98</p>
+<p class="itemText">Concerning the Rod of Moses and the Rod of Aaron</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Moses spake these words unto them, and they brought a rod into each of the houses of their fathers which they had chosen for purity, and there were twelve rods. And Moses wrote upon their rods the names of their fathers: on the rod of Aaron was written the name of Levi, and on the rod of Karmîn was written the name of Judah, and on the rod of Adônyâs was written the name of Reuben, and on the rod of every man of all the houses of Israel was w...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">99</p>
