--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -550,6 +550,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">97</p>
+<p class="itemText">Concerning the Murmuring of Israel</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And once again the children of Israel murmured concerning the ministration of the priests before the Lord, saying, “Are we not Israel, we the seed of Abraham, and why cannot we also offer up sacrifice like them in the Tent of Witness by the Tabernacle of the Law of God, the holy Zion, with censers and incense and the holy instruments? Why should Moses, and his brother Aaron, and their children alone do this? Are we not people whom God hath chosen as much as th...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">98</p>
