--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -547,6 +547,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">96</p>
+<p class="itemText">Concerning the Prophecy about Christ</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Moreover Moses proclaimed in the Law and said, “A prophet like myself shall rise up for you from your brethren, and hearken ye unto him; and every soul that will not hearken unto that prophet ye shall root out from among the people.” And this he said concerning Christ the Son of God. And he also prophesied concerning His Crucifixion, and said, “When the serpents afflicted the children of Israel they cried out to Moses, and Moses cried out to God to deliver t...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">97</p>
